Adding Locale.ROOT to all String.format to avoid build warnings
Signed-off-by: Tejas Shah <shatejas@amazon.com>